--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
+
+
+
 <body id="body">
 	<div class="bodyheader container">
 		<div id="weather">
@@ -27,6 +30,10 @@
 		<form name="todolist" onsubmit="app.controllers.todoController.addTodoFromForm(event)">
 			<input type="checkbox" >
 			<input type="text" name="newToDo">
+			<div id="todolist">
+
+
+			</div>
 			<!-- <input type="submit" name="formPost"> -->
 			<!-- <input type="radio" name="todo1" id="todo1">
 			<label for="todo1">to do item 1</label> -->
@@ -57,3 +64,7 @@
 </body>
 
 </html>
+
+
+
+
