--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
 <body id="body">
 	<div class="bodyheader container">
 		<div id="weather">
-
 			<!-- <div class='card'>
 				<div class="">
 					<h4>Temp:${temp}°F</h4>
 				</div>
 			</div> -->
 		</div>
-		<!-- <span id="cloudy" class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
-				<span id="sunny" class="glyphicon glyphicon-sun" aria-hidden="true"></span> -->
+	
 	</div>
 	<div id="hihihi">
 
@@ -29,7 +27,7 @@
 	<div id="todo">
 		<form name="todolist" onsubmit="app.controllers.todoController.addTodoFromForm(event)">
 			<input type="checkbox" >
-			<input type="text" name="newToDo">
+			<input type="text" name="newToDo" color="black">
 			<div id="todolist">
 
 
